enforce some filename sanitization, needs to address hardcoded path later

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,6 +30,6 @@ all: newdraw
 
 newdraw: $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NEW_DRAW) $(LIBS)
-
+	mv newdraw .. && mkdir -p ../art
 clean:
 	rm -f $(NEW_DRAW) core *.o
